INCLUDE_DIRECTORIES(
	"${PROJECT_SOURCE_DIR}/src/public"
	"${PROJECT_SOURCE_DIR}/src/kernel/api"
	"${PROJECT_SOURCE_DIR}/src/logic/interface"
	"${PROJECT_SOURCE_DIR}/src/logic/define"
	"${PROJECT_SOURCE_DIR}/src/sllib/api"
)

SET(CHAT
	"${PROJECT_SOURCE_DIR}/src/logic/chat/Chat.h"
	"${PROJECT_SOURCE_DIR}/src/logic/chat/Chat.cpp"
	"${PROJECT_SOURCE_DIR}/src/logic/chat/main.cpp"
)

SOURCE_GROUP(api FILES ${SL_KERNEL_API})
SOURCE_GROUP(public FILES ${PUBLIC})
SOURCE_GROUP(interface FILES ${SL_LOGIC_INTERFACE})
SOURCE_GROUP(define FILES ${SL_LOGIC_DEFINE})
SOURCE_GROUP(\\ FILES ${CHAT})

ADD_LIBRARY(Chat SHARED
	${CHAT}
	${SL_KERNEL_API}
	${PUBLIC}
	${SL_LOGIC_INTERFACE}
	${SL_LOGIC_DEFINE}
)

IF(WIN32)
TARGET_LINK_LIBRARIES(Chat AttrGetter.lib slxml.lib)
ENDIF(WIN32)

IF(UNIX)
  TARGET_LINK_LIBRARIES(Chat libAttrGetter.so)
ENDIF(UNIX)

SET_PROPERTY(TARGET Chat PROPERTY FOLDER "logic")
