INCLUDE_DIRECTORIES(
	"${PROJECT_SOURCE_DIR}/src/public"
	"${PROJECT_SOURCE_DIR}/src/kernel/api"
	"${PROJECT_SOURCE_DIR}/src/logic/interface"
	"${PROJECT_SOURCE_DIR}/src/logic/define"
	"${PROJECT_SOURCE_DIR}/src/sllib/api"
)

SET(COMMAND
	"${PROJECT_SOURCE_DIR}/src/logic/command/OCCommand.h"
	"${PROJECT_SOURCE_DIR}/src/logic/command/OCCommand.cpp"
	"${PROJECT_SOURCE_DIR}/src/logic/command/main.cpp"
)

SOURCE_GROUP(api FILES ${SL_KERNEL_API})
SOURCE_GROUP(public FILES ${PUBLIC})
SOURCE_GROUP(interface FILES ${SL_LOGIC_INTERFACE})
SOURCE_GROUP(define FILES ${SL_LOGIC_DEFINE})
SOURCE_GROUP(\\ FILES ${COMMAND})

ADD_LIBRARY(Command SHARED
	${COMMAND}
	${SL_KERNEL_API}
	${PUBLIC}
	${SL_LOGIC_INTERFACE}
	${SL_LOGIC_DEFINE}
)

IF(WIN32)
TARGET_LINK_LIBRARIES(Command AttrGetter.lib)
ENDIF(WIN32)

IF(UNIX)
TARGET_LINK_LIBRARIES(Command libAttrGetter.so)
ENDIF(UNIX)


SET_PROPERTY(TARGET Command PROPERTY FOLDER "framework")
