INCLUDE_DIRECTORIES(
	"${PROJECT_SOURCE_DIR}/src/public"
	"${PROJECT_SOURCE_DIR}/src/kernel/api"
	"${PROJECT_SOURCE_DIR}/src/logic/interface"
	"${PROJECT_SOURCE_DIR}/src/logic/define"
	"${PROJECT_SOURCE_DIR}/src/sllib/api"
)

SET(EVENTENGINE
	"${PROJECT_SOURCE_DIR}/src/logic/eventengine/EventEngine.h"
	"${PROJECT_SOURCE_DIR}/src/logic/eventengine/EventEngine.cpp"
	"${PROJECT_SOURCE_DIR}/src/logic/eventengine/main.cpp"
)

SOURCE_GROUP(api FILES ${SL_KERNEL_API})
SOURCE_GROUP(public FILES ${PUBLIC})
SOURCE_GROUP(interface FILES ${SL_LOGIC_INTERFACE})
SOURCE_GROUP(define FILES ${SL_LOGIC_DEFINE})
SOURCE_GROUP(\\ FILES ${EVENTENGINE})

ADD_LIBRARY(EventEngine SHARED
	${EVENTENGINE}
	${SL_KERNEL_API}
	${PUBLIC}
	${SL_LOGIC_INTERFACE}
	${SL_LOGIC_DEFINE}
)

SET_PROPERTY(TARGET EventEngine PROPERTY FOLDER "core")
#SET_PROPERTY(TARGET EventEngine PROPERTY FOLDER "framework")