INCLUDE_DIRECTORIES(
	"${PROJECT_SOURCE_DIR}/src/public"
	"${PROJECT_SOURCE_DIR}/src/kernel/api"
	"${PROJECT_SOURCE_DIR}/src/logic/interface"
	"${PROJECT_SOURCE_DIR}/src/logic/define"
	"${PROJECT_SOURCE_DIR}/src/sllib/api"
)

SET(GD
	"${PROJECT_SOURCE_DIR}/src/logic/gd/GD.h"
	"${PROJECT_SOURCE_DIR}/src/logic/gd/GD.cpp"
	"${PROJECT_SOURCE_DIR}/src/logic/gd/main.cpp"
)

SOURCE_GROUP(api FILES ${SL_KERNEL_API})
SOURCE_GROUP(public FILES ${PUBLIC})
SOURCE_GROUP(interface FILES ${SL_LOGIC_INTERFACE})
SOURCE_GROUP(define FILES ${SL_LOGIC_DEFINE})
SOURCE_GROUP(\\ FILES ${GD})

ADD_LIBRARY(GD SHARED
	${GD}
	${SL_KERNEL_API}
	${PUBLIC}
	${SL_LOGIC_INTERFACE}
	${SL_LOGIC_DEFINE}
)

IF(WIN32)
TARGET_LINK_LIBRARIES(GD shyloo.lib)
ENDIF(WIN32)

IF(UNIX)
  TARGET_LINK_LIBRARIES(GD shyloo.so)
ENDIF(UNIX)

SET_PROPERTY(TARGET GD PROPERTY FOLDER "logic")
